feat(example): add run configuration for bitcoin fee example app